objects/TM__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>