objects/TM__c/fields/Site_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Site_Phone_No__c</fullName>
    <label>Site Phone No.</label>
    <type>Phone</type>
</CustomField>