objects/TM__c/fields/Site_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Postal_Code__c</fullName>
    <label>Site Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>