objects/TM__c/fields/Site_Scope__c.field-meta.xml
<CustomField>
    <fullName>Site_Scope__c</fullName>
    <label>Site Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>