objects/TM__c/fields/SO_Created_Dates__c.field-meta.xml
<CustomField>
    <fullName>SO_Created_Dates__c</fullName>
    <formula>Sales_Order__r.SO_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Created Date</label>
    <type>Date</type>
</CustomField>