objects/TM__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Mobile Review</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Fully Invoiced</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Sent to EQAI</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
                <isActive>false</isActive>
                <label>Emergency</label>
            </value>
            <value>
                <fullName>Partially Invoiced</fullName>
                <isActive>false</isActive>
                <label>Partially Invoiced</label>
            </value>
            <value>
                <fullName>Pro forma Review</fullName>
                <isActive>false</isActive>
                <label>Pro forma Review</label>
            </value>
            <value>
                <fullName>Ready to Bill</fullName>
                <isActive>false</isActive>
                <label>Ready to Bill</label>
            </value>
            <value>
                <fullName>Received By Billing</fullName>
                <isActive>false</isActive>
                <label>Received By Billing</label>
            </value>
            <value>
                <fullName>Received By Dispatch</fullName>
                <isActive>false</isActive>
                <label>Received By Dispatch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>