objects/TM__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Subsidiary Company</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>T&amp;Ms</relationshipLabel>
    <relationshipName>T_Ms</relationshipName>
    <type>Lookup</type>
</CustomField>