objects/TM__c/fields/T_M_Age__c.field-meta.xml
<CustomField>
    <fullName>T_M_Age__c</fullName>
    <formula>TODAY() - Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>