objects/TM__c/fields/T_M_Created_Date_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>T_M_Created_Date_Scheduled_Date__c</fullName>
    <formula>Confirmed_Date__c  &lt; Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Created Date&lt; Scheduled Date</label>
    <type>Checkbox</type>
</CustomField>