objects/TM__c/fields/T_M_Scheduled_Day__c.field-meta.xml
<CustomField>
    <fullName>T_M_Scheduled_Day__c</fullName>
    <formula>CASE(
MOD(  Scheduled_Date__c  - date(1990, 1, 7),7),
0, "Sunday",
1, "Monday",
2, "Tuesday",
3, "Wednesday",
4, "Thursday",
5, "Friday",
"Saturday"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Scheduled Day</label>
    <type>Text</type>
</CustomField>