objects/TM__c/fields/Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tax Area</label>
    <referenceTo>Tax_Area__c</referenceTo>
    <relationshipLabel>T&amp;Ms</relationshipLabel>
    <relationshipName>T_Ms</relationshipName>
    <type>Lookup</type>
</CustomField>