objects/TM__c/fields/Temp_Is_Equal__c.field-meta.xml
<CustomField>
    <fullName>Temp_Is_Equal__c</fullName>
    <description>Temporary, use for data fix</description>
    <formula>Prevailing_Wage_Job__c ==  Sales_Order_PW__c</formula>
    <label>Temp Is Equal</label>
    <type>Checkbox</type>
</CustomField>