objects/TM__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>Sales_Invoice__r.Posting_Date__c  -  Confirmed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice to Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>