objects/TM__c/fields/TestWD__c.field-meta.xml
<CustomField>
    <fullName>TestWD__c</fullName>
    <label>Test</label>
    <summaryFilterItems>
        <field>TM_Line__c.Resource__c</field>
        <operation>equals</operation>
        <value>a0rf4000001ZREu</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TM_Line__c.Resource__c</field>
        <operation>equals</operation>
        <value>a0rf4000001ZQVr</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>