objects/TM__c/fields/TM_Created_Date_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>TM_Created_Date_Scheduled_Date__c</fullName>
    <formula>Created_Date__c &gt; Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Created Date &gt; Scheduled Date</label>
    <type>Checkbox</type>
</CustomField>