objects/TM__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Text( Sales_Invoice__r.Invoice_Amt_Incl_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <type>Text</type>
</CustomField>