objects/TM__c/fields/Total_Amount_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Incl_Tax__c</fullName>
    <label>Total Amount Incl. Tax</label>
    <summarizedField>TM_Line__c.Line_Amt_Incl_Tax__c</summarizedField>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>