objects/TM__c/fields/Total_Amount_Incl_Tax_FF__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Incl_Tax_FF__c</fullName>
    <formula>Total_Amount_Incl_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Incl. Tax FF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>