objects/TM__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>TM_Line__c.Line_Cost__c</summarizedField>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>