objects/TM__c/fields/Total_Labor_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Count__c</fullName>
    <label>Total Labor Count</label>
    <summaryFilterItems>
        <field>TM_Line__c.Category__c</field>
        <operation>equals</operation>
        <value>Labor</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>