objects/TM__c/fields/Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines__c</fullName>
    <label>Total Lines</label>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>