objects/TM__c/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <formula>Total_Amount__c - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>