objects/TM__c/fields/Total_Profit_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit_Pct__c</fullName>
    <formula>if (Total_Amount__c &lt;&gt; 0, Total_Profit__c / Total_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>