objects/TM__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <label>Total Tax</label>
    <summarizedField>TM_Line__c.Tax__c</summarizedField>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>