objects/TM__c/fields/Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time__c</fullName>
    <formula>CreatedDate  - 0.03800</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger Time</label>
    <type>DateTime</type>
</CustomField>