objects/TM__c/fields/Un_invoiced_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Un_invoiced_Reason_Code__c</fullName>
    <label>Un-invoiced Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing completed by different department</fullName>
            </value>
            <value>
                <fullName>COD required</fullName>
            </value>
            <value>
                <fullName>Customer Service Sales Tax (Add to generator)</fullName>
            </value>
            <value>
                <fullName>Customer Service Sales Tax (apply/exempt)</fullName>
            </value>
            <value>
                <fullName>Incomplete Paperwork</fullName>
            </value>
            <value>
                <fullName>Link Requirement</fullName>
            </value>
            <value>
                <fullName>PO Required</fullName>
            </value>
            <value>
                <fullName>Quote/Pricing Needed</fullName>
            </value>
            <value>
                <fullName>Internal Associate must review prior to submittal</fullName>
            </value>
            <value>
                <fullName>Waiting on third party invoice</fullName>
            </value>
            <value>
                <fullName>Waiting on IC invoice</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on approval to be entered</fullName>
            </value>
            <value>
                <fullName>Need IT Assistance</fullName>
            </value>
            <value>
                <fullName>Waiting on lab/analysis</fullName>
            </value>
            <value>
                <fullName>Ongoing job must bill at one time</fullName>
            </value>
            <value>
                <fullName>Generator Needs to be entered</fullName>
            </value>
            <value>
                <fullName>Approved for Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>