objects/TM__c/fields/Unbilled_Lines__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Lines__c</fullName>
    <formula>Total_Lines__c -  Invoiced_Lines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unbilled Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>