objects/TM__c/fields/update__c.field-meta.xml
<CustomField>
    <fullName>update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>update</label>
    <type>Checkbox</type>
</CustomField>