objects/TM__c/fields/WD__c.field-meta.xml
<CustomField>
    <fullName>WD__c</fullName>
    <label>WD</label>
    <summarizedField>TM_Line__c.Line_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>TM_Line__c.Resource__c</field>
        <operation>equals</operation>
        <value>a0rf4000001ZQVr</value>
    </summaryFilterItems>
    <summaryForeignKey>TM_Line__c.TM__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>