objects/TM__c/recordTypes/Confirmed.recordType-meta.xml
<RecordType>
    <fullName>Confirmed</fullName>
    <active>true</active>
    <label>Confirmed</label>
    
    
</RecordType>