objects/TM__c/recordTypes/Fully_Invoiced.recordType-meta.xml
<RecordType>
    <fullName>Fully_Invoiced</fullName>
    <active>true</active>
    <label>Fully Invoiced</label>
    
    
</RecordType>