objects/TM__c/recordTypes/Mobile_Review.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Review</fullName>
    <active>true</active>
    <label>Mobile Review</label>
    
    
</RecordType>