objects/TM__c/recordTypes/Open.recordType-meta.xml
<RecordType>
    <fullName>Open</fullName>
    <active>true</active>
    <label>Open</label>
    
    
</RecordType>