objects/TM__c/recordTypes/Partially_Invoiced.recordType-meta.xml
<RecordType>
    <fullName>Partially_Invoiced</fullName>
    <active>true</active>
    <label>Partially Invoiced</label>
    
</RecordType>