objects/TM__c/recordTypes/Ready_to_Bill.recordType-meta.xml
<RecordType>
    <fullName>Ready_to_Bill</fullName>
    <active>true</active>
    <label>Ready to Bill</label>
    
</RecordType>