objects/TM__c/recordTypes/Received_By_Billing.recordType-meta.xml
<RecordType>
    <fullName>Received_By_Billing</fullName>
    <active>true</active>
    <label>Received By Billing</label>
    
</RecordType>