objects/TM__c/recordTypes/Scheduled.recordType-meta.xml
<RecordType>
    <fullName>Scheduled</fullName>
    <active>true</active>
    <label>Scheduled</label>
    
    
</RecordType>