objects/TM__c/recordTypes/Sent_to_EQAI.recordType-meta.xml
<RecordType>
    <fullName>Sent_to_EQAI</fullName>
    <active>true</active>
    <label>Sent to EQAI</label>
    
    
</RecordType>