objects/TM__c/recordTypes/Void.recordType-meta.xml
<RecordType>
    <fullName>Void</fullName>
    <active>true</active>
    <label>Void</label>
    
    
</RecordType>