objects/TM__c/validationRules/Inactive_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Customer</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT( Bill_to_Customer__r.Customer_Status__c ) ="Inactive"</errorConditionFormula>
    <errorMessage>Customer is Inactive</errorMessage>
</ValidationRule>