objects/TM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>No__c</columns>
    <columns>Status__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Account_Executive__c</columns>
    <columns>Project_Coordinator__c</columns>
    <columns>Amount__c</columns>
    <columns>Amount_Incl_Tax__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Contract__c</columns>
    <columns>Tax_Area__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>