objects/TM__c/listViews/MyServiceCenter_T_M_s.listView-meta.xml
<ListView>
    <fullName>MyServiceCenter_T_M_s</fullName>
    <columns>No__c</columns>
    <columns>Bill_to_Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Amount_Incl_Tax__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Service_Center__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>MyServiceCenter T&amp;M's</label>
</ListView>