objects/TM__c/listViews/SC02_T_M.listView-meta.xml
<ListView>
    <fullName>SC02_T_M</fullName>
    <columns>No__c</columns>
    <columns>Bill_to_Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Amount_Incl_Tax__c</columns>
    <columns>Contract__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>02</value>
    </filters>
    <label>SC02 T&amp;M</label>
</ListView>