objects/TM__c/listViews/SC04_T_M_Status.listView-meta.xml
<ListView>
    <fullName>SC04_T_M_Status</fullName>
    <columns>No__c</columns>
    <columns>Status__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>Bill_to_Customer__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Project_Coordinator__c</columns>
    <columns>Amount__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>Site_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>04</value>
    </filters>
    <label>SC04 T&amp;M Status</label>
</ListView>